test/invalid/baseline/callback-noreturn.txt
Syntax error at line 1, since `callback MyCall`:
callback MyCall = ;
                  ^ Callback lacks a return type
